スタイルシートの参照先を変更

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <title>MyProfile</title>
     <meta name="description" content="朝比奈さんのプロフィールサイト">
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style/style.css">
+    <!-- <link rel="stylesheet" href="style/style.css"> -->
+    <link rel="stylesheet" href="https://omochi1002.github.io//profile/style/style.css">
 
     <!-- メディアクエリ -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
